# ai-trading-assistant

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  config.default.toml  config.toml  manage.sh  pairs.json
crates/engine/: Cargo.toml
crates/engine/frontend/: app.js  charts.js  index.html  package-lock.json  package.json  styles.css  vite.config.ts
crates/engine/frontend/src/: App.svelte  chartRegistry.svelte.ts  state.svelte.ts
crates/engine/frontend/src/components/: AdxChart.svelte  AnalyticsDashboard.svelte  AtrChart.svelte  DecisionTrading.svelte  ExchangeSettings.svelte  Header.svelte  LiveTerminal.svelte  MacdChart.svelte  PerformanceDashboard.svelte  PriceChart.svelte  RiskCalculator.svelte  RsiChart.svelte  SettingsPanel.svelte  Sidebar.svelte  SqueezeChart.svelte  TabHeader.svelte  TradeListLedger.svelte  VolumeChart.svelte
crates/engine/frontend/src/tests/: state.test.ts
crates/engine/src/: analyzer.rs  automation.rs  candle_builder.rs  config.rs  db.rs  index.html  lib.rs  llm.rs  main.rs  orchestrator.rs  paper_trading.rs  performance_evaluator.rs  profile_evaluation.rs  risk.rs  risk_calculator.rs  server.rs  stats_compiler.rs  sync_scheduler.rs  websocket.rs
crates/engine/src/adapters/: bitget.rs  bybit.rs  coinbase.rs  edgex.rs  hyperliquid.rs  kraken.rs  mod.rs
crates/engine/tests/: db_integration.rs  fault_tolerance.rs  pipeline_integration.rs  replay_engine.rs
crates/shared/: Cargo.toml
crates/shared/src/: indicators.rs  lib.rs  models.rs  normalized.rs
crates/shared/src/indicators/: adx.rs  atr.rs  bollinger.rs  ema.rs  macd.rs  mod.rs  rsi.rs  sma.rs  squeeze.rs
docs/: architecture.md  indicators-guide.md  plan.md  user-manual.md
