[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local workspace libraries
shared = { path = "../shared" }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Decimal implementation
rust_decimal = { version = "1.34", features = ["serde-float"] }

# WebSocket execution & streams
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# URL Parsing
url = "2.5"

# Process-level Cryptography Provider (added to prevent runtime panic)
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# JSON deserialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
