[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# serde allows serialize/deserialize structures to JSON for storage or API transmission
serde = { version = "1.0", features = ["derive"] }
# rust_decimal provides arbitrary-precision decimal math, crucial for financial calculations
rust_decimal = { version = "1.34", features = ["serde-float"] }
